language/move-lang/tests/move_check/parser/expr_loop_braces.exp
error: 

   ┌── tests/move_check/parsing/expr_loop_braces.move:4:14 ───
   │
 4 │         loop if (v < 10) break
   │              ^^ Unrecognized Token: if
   ·
 4 │         loop if (v < 10) break
   │              -- Expected:  "!", "&", "&mut ", "(", "()", "*", "-", "::", "abort", "break", "continue", "copy", "false", "move", "return", "true", "{", r#"0[xX][0-9a-fA-F]+"#, r#"[0-9]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

