language/move-lang/tests/move_check/parser/expr_loop_braces.move
module M {
    f(v: u64) {
        // Braces required for control expression inside "loop" expression
        loop if (v < 10) break
    }
}
